# matrixmirror

./: .gitignore  README.md
mm-host/: camera.py  components.py  display.py  install.sh  main.py  mm-host  requirements.txt  util.py
mm-pico/: CMakeLists.txt  config.h  hub75.cpp  hub75.h  hub75.pio  main.cpp  main.h  rp2040.cfg  server.cpp  server.h  update_remote.sh
